--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
 .app {
   width: 500px;
   height: 100%;
-  display: flex;
+  display: flex; 
   flex-direction: column;
   align-items: center;
 }
@@ -112,19 +112,20 @@ body {
   height: 160px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: end;
 }
 
 .footer-links {
-  margin: 0px 0px 20px 0px;
+  margin: 10px 0px 20px 0px;
   width: 100%;
   height: 40px;
   display: flex;
   justify-content: center;
+  gap: 20px;
 }
 
 .icon-link {
-  margin: 0px 10px 0px 10px;
   width: 40px;
   height: 40px;
   transition: 0.2s;
@@ -139,4 +140,60 @@ body {
 
 .icon-link:hover {
   transform: scale(1.15);
+}
+
+.info {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: flex;
+  align-items: center;
+  height: 30px;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  user-select: none;
+  transition: 0.2s;
+}
+
+.info svg {
+  margin: 0 0 0 8px;
+  width: 30px;
+  height: 30px;
+  fill: white;
+  transition: 0.2s;
+}
+
+.info svg g path{
+  fill: white;
+  transition: 0.2s;
+}
+
+.info-text {
+  margin: 0;
+  font-family: "Poppins", system-ui;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 24px;
+}
+
+.info:hover {
+  color: #D0FF00;
+  transform: scale(1.05);
+}
+
+.info:hover svg g path{
+  fill: #D0FF00;
+}
+
+@media only screen and (max-width: 1100px) {
+  .info {
+    scale: 0.8;
+    position: inherit;
+    justify-content: center;
+    padding: 0 0 20px 0;
+    height: 30px;
+    width: 175px;
+    z-index: 2;
+  }
 }
